x1198 Specify comments on particular samples in QCLabwareRequest